finished customer, working on cart

--- a/eShop_Assignment/eShop Assignment/eShop/eShop.csproj
+++ b/eShop_Assignment/eShop Assignment/eShop/eShop.csproj
@@ -30,4 +30,8 @@
       <ProjectReference Include="..\eShop.Infrastructure\eShop.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Payment\Index.cshtml" />
+    </ItemGroup>
+
 </Project>
