--- a/eShop.API/eShop.API/Dockerfile
+++ b/eShop.API/eShop.API/Dockerfile
@@ -1,15 +1,14 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER $APP_UID
 WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
-
-#ENV eShopDbContext="Server=73.67.134.228.1433; Database=eShopApiDb; User=SA; Password=NewStrongPassword456; TrustServerCertificate=True;"
+EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["eShop.API/eShop.API.csproj", "eShop.API/"]
+COPY ["eShop.Infrastructure/eShop.Infrastructure.csproj", "eShop.Infrastructure/"]
+COPY ["eShop.ApplicationCore/eShop.ApplicationCore.csproj", "eShop.ApplicationCore/"]
 RUN dotnet restore "eShop.API/eShop.API.csproj"
 COPY . .
 WORKDIR "/src/eShop.API"
